# spo

./: .coverage  .gitignore  .pre-commit-config.yaml  .ytmusic_headers.json.template  AGENTS.md  README.md  browser.json.template  db.py  expcetions.py  main.py  pyproject.toml  sonar-project.properties  spo-scetchbook.py
.github/: copilot-instructions.md
.github/workflows/: lint.yml  tests.yml
docs/: auth-setup.md  cli-decisions.md  coverage-gap-decisions.md  docstring-decisions.md  linting-decisions.md  python-runtime-decisions.md  runtime-storage-decisions.md  spotify-auth-decisions.md  throttling.md  type-annotation-decisions.md  v1-sync-app.md  web-ui-asset-decisions.md  workflow-action-versioning.md  workflow-trigger-decisions.md  ytmusic-auth-decisions.md
src/spo/: __init__.py  app.py  auth_server.py  config.py  demo_throttling.py  exceptions.py  main.py  matching.py  models.py  persistence.py  spotify_client.py  sync.py  throttling.py  utils.py  youtube_music_client.py
src/spo/services/: __init__.py  base.py  spotify.py  ytmusic.py
src/spo/web/: __init__.py  templates.py
tests/: README.md  __init__.py  conftest.py  fakes.py  test_auth_server.py  test_config_and_main.py  test_main.py  test_matching.py  test_persistence.py  test_spotify_client.py  test_spotify_service.py  test_sync_engine.py  test_throttling.py  test_web_app.py  test_youtube_music_client.py  test_ytmusic_service.py
