[project]
name = "spo"
version = "0.1.0"
description = "A local app for migrating music libraries between streaming services"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.135.3",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "platformdirs>=4.9.4",
    "python-multipart>=0.0.22",
    "requests[security]>=2.33.1",
    "spotipy>=2.26.0",
    "uvicorn>=0.43.0",
    "ytmusicapi>=1.11.5"
]

[dependency-groups]
dev = [
    "coveralls>=4.1.0",
    "httpx>=0.28.1",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "ty>=0.0.28",
    "types-requests>=2.33.0.20260402",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
src-root = "src"

[project.scripts]
spo = "spo.main:main"

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
mypy_path = ["src"]
packages = ["spo"]
warn_unused_ignores = true
strict_optional = true
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
[tool.ruff.lint.isort]

[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "--verbose"]
filterwarnings = ["error", "ignore::UserWarning", "ignore::DeprecationWarning"]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
