[project]
name = "spo"
version = "1.0.0"
description = "A local app for migrating music libraries between streaming services"
readme = "README.md"
requires-python = ">=3.14.3,<3.15"
dependencies = [
    "fastapi>=0.135.3",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "platformdirs>=4.9.4",
    "python-multipart>=0.0.24",
    "requests[security]>=2.33.1",
    "spotipy>=2.26.0",
    "uvicorn>=0.43.0",
    "ytmusicapi>=1.11.5"
]

[dependency-groups]
dev = [
    "coveralls>=4.1.0",
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "ty>=0.0.29"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
src-root = "src"

[project.scripts]
spo = "spo.main:main"

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint]
ignore = [
    "COM812", # handled by ruff format
    "COM819", # handled by ruff format
    "D203",   # incorrect-blank-line-before-class
    "D211",   # no-blank-line-before-class
    "D212",   # multi-line-summary-first-line
    "EM101",  # xception must not use a string literal, assign to variable first
    "TRY003"  # Avoid specifying long messages outside the exception class
]
select = ["ALL"]
fixable = ["ALL"]

[tool.ruff.lint.isort]

[tool.ruff.lint.per-file-ignores]
"src/spo/web/templates.py" = ["E501"]
"tests/**/*.py" = ["S101", "S105"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config", "--verbose", "--cov=src"]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
